symfony/web/themes/default/css/main.css
/* ... */
input[type=button].delete,
input[type=submit].delete {
    background-color: #aa4935;
}

input[type=button].reset.hover,
input[type=reset].reset.hover,
input[type=submit].reset.hover {
    background-color: #4d4d4d;
}

input[type=button].reset,
input[type=reset].reset,
input[type=submit].reset {
    background-color: #848484;
}

/* ================ Form styles: End ================ */

/* ================ searchForm styles: Begin ================ */
.searchForm form ol li {
    margin:0 0 15px 0;
    width:25%;
}
.searchForm form ol li label {
	display:block;
	color:#5d5d5d;
	margin-bottom:5px;
}
.searchForm form ol li input {
	float:left;
	width:80%;
}
.searchForm form ol li select {
	float:left;
	width:84%;    
}
.searchForm form ol li input.calendar {
	width:165px;
}
/* ================ searchForm styles: end ================ */

/* ================ Two column styles: Begin ================ */
.twoColumn form ol li {
	width:50%;
}
.twoColumn form ol li.line {
	width:100%;
}
/* ================ Two column styles: End ================ */

/* ================ Widget specific styles: Begin ================ */
.ui-datepicker-trigger {
	margin: 0 0 0 5px;
    display: block;
    float: left;
}
.searchForm form ol li label.date_range_label {
    width:auto;
    margin-left:  0px;
    margin-right: 10px;
    clear: both;
}

form ol li label.time_range_label {
    width:auto;
    margin-left: 20px;
    margin-right: 10px;
}
form ol li select.timepicker {
    width: 70px;
    margin-left: 0px;
    margin-right: 10px;
}
form ol li input.time_range_duration {
    width: auto;
    width: 60px;
    margin-left: 0px;
    margin-right: 10px;
}
/* ================ Widget specific styles: End ================ */

/* ================ Paging styles: Begin ================ */
.paging li {
	display:inline;
}
.paging a {
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	padding:3px 8px;
	color:#5d5d5d;
	text-decoration:none;
	float:left;
	margin:0 2px;
}
.paging a:hover {
	background:#eaeaea;
}
.paging a.current {
	background:#33ac3f;
	color:#fff;
}
.paging li.first a, .paging li.previous a, .paging li.next a, .paging li.last a {
	padding:1px 8px;
	text-indent:-9999px;
}
.paging li.first a {
	background: url(../images/paging-first.png) no-repeat 0 0;
	margin:3px 0 0 0;
}
.paging li.previous a {
	background: url(../images/paging-previous.png) no-repeat 0 0;
	margin:2px 0 0 5px;
}
.paging li.next a {
	background: url(../images/paging-next.png) no-repeat 0 0;
	margin:2px 0 0 7px;
}
.paging li.last a {
	background: url(../images/paging-last.png) no-repeat 0 0;
	margin:3px 0 0 0;
}
.paging li.desc {
	float:left;
	color:#666;
	margin:3px 0 0 0;
	padding-right:10px;
}
/* ================ Paging styles: End ================ */

/* ================ Table styles: Begin ================ */
table.table {
    width: 100%;
    border-spacing:0;
    border-collapse:collapse;    
}
table.table th {
	background:#f28c38;
	color:#fff;
	padding:7px;
	border:1px solid #fff;
	text-align:left;
}
table.table th a {
	color:#fff;
        text-decoration: none;
        display: inline-block;
        width: 100%;
}
table.table th.center, table.table td.center {
	text-align:center;
}
table.table td {
	padding:7px;
	background:#fff;
	line-height:20px;
}
table.table td.comments input {
	float:left;
}
table.table td.comments img {
	float:left;
	margin:2px 0 0 2px;
}
table thead tr .header {
	background-image: url(../images/tablesorter-bg.png);
	background-repeat: no-repeat;
	background-position: 95% 55%;
	cursor: pointer;
}
table.nosort thead tr .header {
	background-image: none;
	cursor: default;
}
table tbody tr.odd td {
	background-color:#eaeaea;
}
table tbody tr.total td {
	background-color:#555657;
	color:#fff;
}
table tbody tr td strong {
	color:#333;
	font-weight:bold;
}
table tbody tr.total td strong {
	font-weight:bold;
	color:#fff;
}
table thead tr .headerSortUp {
	background-image: url(../images/tablesorter-asc.png);
}
table thead tr .headerSortDown {
	background-image: url(../images/tablesorter-dsc.png);
}
table.table th.checkbox-col {
    width: 10px;
}
table.table td.right {
    text-align: right;
}
table tfoot tr.total td {
	background-color:#555657;
	color:#fff;
}
table tfoot tr td strong {
	color:#333;
	font-weight:bold;
}
table tfoot tr.total td strong {
	font-weight:bold;
	color:#fff;
}
table.hover tr:hover, 
table.hover tr:hover td, 
table.hover tr:hover td table tbody tr,
table.hover tr:hover td table tbody tr td {
    background-color:#CCC;
}
table.data th { /* Used in performance/performanceReview */
    background: #FFFFFF;
    color: inherit;
    border: none;
    font-weight: bold;    
}

/* ================ Table styles: End ================ */

/* ================ Definition list styles: Begin ================ */
dl.search-params dt {
    clear: left;
    float: left;
    width: 150px;
    margin: 0;
    padding: 5px;
    font-weight: bold;
}

dl.search-params dd {
    margin-left: 150px;
    padding: 5px;
}

dl.search-params dt.total {

}

dl.search-params dd.total {

}

/* ================ Definition list styles: End ================ */

/* ================ List styles: Begin ================ */
ul.disc { /* Used in admin/pimCsvImport */
    list-style: disc;
    margin-left: 13px;
    line-height: 25px;
}
ul.helpList li { /* Used in admin/viewEmailNotification */
	color:#a9a9a9;
	font-size:12px;
    margin: 5px 0 0 0;
}
/* ================ List styles: End ================ */

/* ================ Top level message styles: Begin ================ */
.message {
	border:1px solid #d2d1d1;
	color:#5d5d5d;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	font-weight:bold;
	padding:14px;
	margin-bottom:15px;
	position:relative;
	letter-spacing:1px;
}
.message a.messageCloseButton {
	text-indent:-9999px;
	width:23px;
	height:23px;
	position:absolute;
	top:10px;
	right:12px;
}
.warning {
	border:1px solid #f8e3a4;
	color:#e79400;
	background-color:#fff4c7;
}
/* ... */

